appId: io.github.lydavid.musicsearch.debug
---
- launchApp
- startRecording: search-recording
- assertVisible: "Search MusicBrainz"
- tapOn: "Resource"
- tapOn: "Recording"
- tapOn:
    text: "Search"
    index: 0
- inputText: "rid:\"32c7e292-14f1-4080-bddf-ef852e0a4c59\""
- tapOn: "Under Pressure"

- assertVisible: "Recording by Queen & David Bowie"
- assertVisible: "Recording information"
- assertVisible: "First release date: 1981-10"
- tapOn: "Genres .*"
- tapOn: "Tags .*"
- tapOn: "External links .*"
- tapOn: "Aliases .*"
- tapOn: "Releases"

- stopRecording
