appId: io.github.lydavid.musicsearch.debug
---
- launchApp
- startRecording: search-release-group
- assertVisible: "Search MusicBrainz"
- tapOn: "Resource"
- tapOn: "Release Group"
- tapOn:
    text: "Search"
    index: 0
- inputText: "rgid:\"58d7e065-9069-4c0b-be8b-6dc55667880d\""
# Aliases are not included when searching release groups, unless it was inserted through
# other sources such as visiting the release group, or browsing a list of release groups.
# https://tickets.metabrainz.org/browse/SEARCH-746
- tapOn: "エルマ.*"

- assertVisible: "エルマ (Elma)"
- assertVisible: "Release Group information"
- assertVisible: "Type: Album"
- tapOn: "Filter"
- inputText: "wiki"
- "hideKeyboard"
- assertVisible: "https://en.wikipedia.org/wiki/Elma_(album)"
- tapOn: "Cancel"
- tapOn: "Releases"
- tapOn: "More actions"
- tapOn: "Stats"
- assertVisible: "Cached 6 / 6"

- stopRecording
