appId: io.github.lydavid.musicsearch.debug
---
- launchApp
- startRecording: create-delete-collection

- tapOn: Collections

- tapOn: "Create a collection"
- inputText: "Delete me"
- tapOn: "OK"
- assertVisible: "Delete me"

- tapOn: "Remote"
- assertVisible: "Delete me"
- tapOn: "Local"
- assertNotVisible: "Delete me"
- tapOn: "Local"
- tapOn: "Remote"

- longPressOn: "Delete me"
- tapOn: "More actions"
- tapOn: "Delete 1"
- assertNotVisible: "Delete me"

- stopRecording
