appId: io.github.lydavid.musicsearch.debug
---
- launchApp
- startRecording: search-artist
- assertVisible: "Search MusicBrainz"
- tapOn:
    text: "Search"
    index: 0
- inputText: "zutomayo"
- tapOn: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"

- assertVisible: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"
- tapOn: "Filter"
- inputText: "o"
- assertVisible: "Sort name: Zutto Mayonaka De Iinoni."
- assertVisible: "Type: Group"
- assertVisible: "Founded: 2018"
- tapOn: Clear filter text
- inputText: "spotify"
- "hideKeyboard"
- assertVisible: "https://open.spotify.com/artist/38WbKH6oKAZskBhqDFA8Uj"
- assertNotVisible: "Sort name: Zutto Mayonaka De Iinoni."
- assertNotVisible: "Type: Group"
- assertNotVisible: "Founded: 2018"
- tapOn: Clear filter text
- inputText: "wiki"
- assertVisible: "https://en.wikipedia.org/wiki/Zutomayo"
- assertVisible: "https://www.wikidata.org/wiki/Q60989925"
- tapOn: Clear filter text
- inputText: "japan"
- assertVisible: "Japan"
- tapOn: Cancel
- tapOn: "Add ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band) to collection"
- tapOn: "Create a collection"
- inputText: "Artists"
- tapOn: "OK"
- tapOn: "Artists"

- assertVisible: "Release Groups"
- tapOn: "Release Groups"
- assertVisible: "ぐされ (Gusare)"
- assertNotVisible: "潜潜話 (Hisohiso Banashi)"
- tapOn: "More actions"
- tapOn: "Sort"
- scrollUntilVisible:
    element: "Type alphabetically"
- tapOn: "Type alphabetically"
# When there is more data, the loading takes long enough such that
# the current item's position is no longer retained.
# But with less data, like in this test, the item's position is retained.
# Because of this, it's better not to assert what is on screen to reduce chances of flaking.

- tapOn: "Releases"

- tapOn:
    text: "Back"
    index: 0
- assertVisible: "Search MusicBrainz"
- assertVisible: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"

- tapOn: "Database"
- tapOn: "History"
- tapOn: "Filter"
- inputText: "zutomayo"
- assertVisible: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"
- tapOn: Clear filter text
- inputText: "zutto mayo"
- tapOn: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"


# Repeat tests with cached data
- assertVisible: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"
- tapOn: "Filter"
- inputText: "o"
- assertVisible: "Sort name: Zutto Mayonaka De Iinoni."
- assertVisible: "Type: Group"
- assertVisible: "Founded: 2018"
- tapOn: Clear filter text
- inputText: "spotify"
- "hideKeyboard"
- assertVisible: "https://open.spotify.com/artist/38WbKH6oKAZskBhqDFA8Uj"
- assertNotVisible: "Sort name: Zutto Mayonaka De Iinoni."
- assertNotVisible: "Type: Group"
- assertNotVisible: "Founded: 2018"
- tapOn: Clear filter text
- inputText: "wiki"
- assertVisible: "https://en.wikipedia.org/wiki/Zutomayo"
- assertVisible: "https://www.wikidata.org/wiki/Q60989925"
- tapOn: Clear filter text
- inputText: "japan"
- assertVisible: "Japan"
- tapOn: Cancel
- tapOn: "Add ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band) to another collection"
- tapOn: "Artists"
# Do not assert text in snackbar because sometimes it doesn't show up (in CI only).

- assertVisible: "Release Groups"
- tapOn: "Release Groups"
- assertVisible: "ぐされ (Gusare)"
- assertVisible: "潜潜話 (Hisohiso Banashi)"
- tapOn: "More actions"
- tapOn: "Sort"
- tapOn: "Earliest cached"
- assertNotVisible: "潜潜話 (Hisohiso Banashi)"

- tapOn: "Releases"

- tapOn: Collections
- tapOn: "Filter"
- inputText: "art"
- tapOn: "Artists"

- tapOn: "More actions"
- tapOn: "Stats"
- assertVisible: "Cached 1 / 1"
- back
- longPressOn: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"
- assertVisible: "Selected 1 / 1"
- back
- assertVisible: "Artists"
- longPressOn: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"
- assertVisible: "Selected 1 / 1"
- tapOn: "Filter"
- inputText: "zutto"
- tapOn: "Cancel"
- tapOn: "More actions"
- tapOn: "Delete 1"
- assertVisible: "Deleting 1 from Artists"
- tapOn: "Undo"
- longPressOn: "ずっと真夜中でいいのに。 (ZUTOMAYO, Japanese pop band)"
- tapOn: "More actions"
- tapOn: "Delete 1"
- assertVisible: "Deleting 1 from Artists"
- assertVisible: "Deleted 1 from Artists"
- tapOn: "Back"
- tapOn: "Cancel"
- assertVisible: "Collections"
- longPressOn: "Artists"
- tapOn: "More actions"
- tapOn: "Delete 1"
- assertNotVisible: "Artists"

- stopRecording
